--- a/agenda/package.json
+++ b/agenda/package.json
@@ -20,16 +20,47 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/base64": "^4.17.0",
     "@ionic-native/calendar": "^4.16.0",
-    "@ionic-native/core": "~4.15.0",
+    "@ionic-native/camera": "^4.17.0",
+    "@ionic-native/core": "^4.16.0",
+    "@ionic-native/google-maps": "^4.15.1",
+    "@ionic-native/image-picker": "^4.16.0",
+    "@ionic-native/launch-navigator": "^4.16.0",
+    "@ionic-native/local-notifications": "^4.16.0",
+    "@ionic-native/native-geocoder": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
+    "@ionic-native/sqlite": "^4.16.0",
+    "@ionic-native/sqlite-porter": "^4.16.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "com-badrit-base64": "0.2.0",
+    "cordova-android": "^7.1.1",
+    "cordova-plugin-actionsheet": "2.3.3",
+    "cordova-plugin-badge": "0.8.7",
     "cordova-plugin-calendar": "5.1.2",
+    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-dialogs": "2.0.1",
+    "cordova-plugin-googlemaps": "2.4.6",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-local-notification": "0.9.0-beta.2",
+    "cordova-plugin-nativegeocoder": "3.1.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "2.2.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "2.5.0",
+    "intl": "^1.2.5",
     "ionic-angular": "3.9.2",
+    "ionic2-calendar": "^0.4.5",
     "ionicons": "3.0.0",
+    "moment": "^2.22.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "1.0.5",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "4.2.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -39,7 +70,35 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-calendar": {}
-    }
+      "cordova-plugin-calendar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {},
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
+      },
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyBmXKqKvdda4foUTyAbaMYxUeIJpD72YC0",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+        "OKHTTP_VERSION": "3.+"
+      },
+      "cordova-plugin-camera": {},
+      "com-badrit-base64": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
