--- a/agenda/package.json
+++ b/agenda/package.json
@@ -20,43 +20,51 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@ionic-native/base64": "^4.17.0",
-    "@ionic-native/calendar": "^4.16.0",
+    "@ionic-native/calendar": "^4.17.0",
     "@ionic-native/camera": "^4.17.0",
-    "@ionic-native/core": "^4.16.0",
+    "@ionic-native/core": "^4.17.0",
+    "@ionic-native/file": "^4.17.0",
+    "@ionic-native/file-path": "^4.17.0",
     "@ionic-native/google-maps": "^4.15.1",
-    "@ionic-native/image-picker": "^4.16.0",
-    "@ionic-native/launch-navigator": "^4.16.0",
-    "@ionic-native/local-notifications": "^4.16.0",
-    "@ionic-native/native-geocoder": "^4.16.0",
+    "@ionic-native/image-picker": "^4.17.0",
+    "@ionic-native/launch-navigator": "^4.17.0",
+    "@ionic-native/local-notifications": "^4.17.0",
+    "@ionic-native/native-geocoder": "^4.17.0",
     "@ionic-native/splash-screen": "~4.15.0",
-    "@ionic-native/sqlite": "^4.16.0",
-    "@ionic-native/sqlite-porter": "^4.16.0",
+    "@ionic-native/sqlite": "^4.17.0",
+    "@ionic-native/sqlite-porter": "^4.17.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "angular-fontawesome": "1.0.0",
     "com-badrit-base64": "0.2.0",
-    "cordova-android": "^7.1.1",
+    "config": "^3.0.0",
+    "cordova-android": "6.3.0",
     "cordova-plugin-actionsheet": "2.3.3",
     "cordova-plugin-badge": "0.8.7",
     "cordova-plugin-calendar": "5.1.2",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "2.0.1",
-    "cordova-plugin-googlemaps": "2.4.6",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-ionic-webview": "1.2.1",
     "cordova-plugin-local-notification": "0.9.0-beta.2",
     "cordova-plugin-nativegeocoder": "3.1.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-telerik-imagepicker": "2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.5.0",
+    "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
     "ionic-angular": "3.9.2",
-    "ionic2-calendar": "^0.4.5",
+    "ionic2-calendar": "^0.4.6",
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
+    "normalize-url": "^3.3.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "1.0.5",
@@ -64,6 +72,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
@@ -75,27 +84,22 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "uk.co.workingedge.cordova.plugin.sqliteporter": {},
-      "cordova-plugin-local-notification": {},
-      "cordova-plugin-telerik-imagepicker": {
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "your usage message"
-      },
       "cordova-plugin-nativegeocoder": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyBmXKqKvdda4foUTyAbaMYxUeIJpD72YC0",
-        "PLAY_SERVICES_VERSION": "15.0.1",
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      "config": {
+        "ionic_copy": "./config/copy.config.js",
+        "ionic_sass": "./config/sass.config.js"
       },
       "uk.co.workingedge.phonegap.plugin.launchnavigator": {
         "OKHTTP_VERSION": "3.+"
       },
-      "cordova-plugin-camera": {},
-      "com-badrit-base64": {}
+      "com-badrit-base64": {},
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
